--- a/public/styles.css
+++ b/public/styles.css
@@ -51,6 +51,7 @@ header {
   -webkit-box-shadow: 0px 10px 50px -20px rgba(0, 0, 0, 0.75);
   -moz-box-shadow: 0px 10px 50px -20px rgba(0, 0, 0, 0.75);
   box-shadow: 0px 10px 50px -20px rgba(0, 0, 0, 0.75);
+  z-index: 10;
 }
 
 main {
@@ -391,6 +392,9 @@ main {
   margin-bottom: 15px;
   padding: 15px;
   border-radius: 10px;
+  -webkit-box-shadow: 0px 0px 50px 0px rgba(0,0,0,0.5);
+  -moz-box-shadow: 0px 0px 50px 0px rgba(0,0,0,0.5);
+  box-shadow: 0px 0px 50px 0px rgba(0,0,0,0.5);
 }
 
 .start-page h1 {
@@ -407,14 +411,127 @@ main {
   text-align: center;
 }
 
+.users-per-day .nr-chart-bars {
+  text-align: center;
+}
+
+.users-per-day .nr-chart-bars input[type='number'] {
+  margin-top: 0;
+  width: 100px;
+}
+
 .users-per-day .chart {
-  width: 100%;
+  position: relative;
+  width: calc(100% - 20px);
   height: 300px;
+  display: flex;
+  justify-content: space-around;
+  align-items: flex-end;
+  border-left: 1px solid black;
+  border-bottom: 1px solid black;
+  z-index: 0;
+  margin: 50px auto;
+}
+
+.users-per-day .chart::before {
+  content: '';
+  position: absolute;
+  display: block;
+  left: -5px;
+  top: 0;
+  width: 8px;
+  height: 8px;
+  border-left: 1px solid black;
+  border-bottom: 1px solid black;
+  transform: rotate(135deg);
+}
+
+.users-per-day .chart::after {
+  content: '';
+  position: absolute;
+  display: block;
+  right: 0;
+  bottom: -5px;
+  width: 8px;
+  height: 8px;
+  border-left: 1px solid black;
+  border-bottom: 1px solid black;
+  transform: rotate(-135deg);
+}
+
+.users-per-day .chart .chart-bar {
+  height: 0;
+  border: 1px solid black;
+  border-bottom: none;
+  background-color: rgba(0, 0, 0, 0.5);
+  border-top-right-radius: 10px;
+  border-top-left-radius: 10px;
+  position: relative;
+}
+
+.users-per-day .chart .nr-users-axis {
+  position: absolute;
   display: flex;
   justify-content: center;
   align-items: center;
-  border: 1px solid black;
-  border-radius: 10px;
+  flex-flow: column;
+  top: -30px;
+  left: -15px;
+  font-size: 14px;
+  font-weight: bold;
+}
+
+.users-per-day .chart .dates-axis {
+  position: absolute;
+  bottom: 25px;
+  right: -25px;
+  font-size: 14px;
+  font-weight: bold;
+  transform: rotate(-90deg);
+}
+
+.users-per-day .chart .chart-bar .amount {
+  color: black;
+  position: absolute;
+  bottom: calc(100% + 10px);
+  width: 100%;
+  text-align: center;
+}
+
+.users-per-day .chart .chart-bar .date {
+  position: absolute;
+  top: calc(100% + 10px);
+  width: 100%;
+  text-align: center;
+  font-size: 10px;
+  font-weight: bold;
+}
+
+.users-per-day .chart .prev-dates,
+.users-per-day .chart .next-dates {
+  position: absolute;
+}
+
+.users-per-day .chart .prev-dates {
+  cursor: pointer;
+  width: 20px;
+  height: 20px;
+  border-right: 10px solid black;
+  border-top: 10px solid transparent;
+  border-bottom: 10px solid transparent;
+  right: calc(100% + 10px);
+  top: 50%;
+}
+
+.users-per-day .chart .next-dates {
+  cursor: pointer;
+  width: 20px;
+  height: 20px;
+  border-left: 10px solid black;
+  border-top: 10px solid transparent;
+  border-bottom: 10px solid transparent;
+  left: calc(100% + 10px);
+  top: 50%;
 }
 
 .top-users {
@@ -430,11 +547,19 @@ main {
   margin: 0 auto;
 }
 
+.top-users .users-list .users-list-title {
+  display: flex;
+  justify-content: space-between;
+  padding: 10px;
+  border-bottom: 2px solid black;
+  font-weight: bold;
+}
+
 .top-users .users-list .user {
   display: flex;
   justify-content: space-between;
   padding: 10px;
-  border-bottom: 1px solid black;
+  border-bottom: 1px dotted black;
 }
 
 .our-location {
@@ -447,7 +572,7 @@ main {
 
 .our-location .map {
   width: 100%;
-  height: 300px;
+  height: 400px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -460,6 +585,9 @@ main {
   margin-top: 30px;
   border-radius: 10px;
   padding: 15px;
+  -webkit-box-shadow: 0px 0px 50px 0px rgba(0,0,0,0.5);
+  -moz-box-shadow: 0px 0px 50px 0px rgba(0,0,0,0.5);
+  box-shadow: 0px 0px 50px 0px rgba(0,0,0,0.5);
 }
 
 .year-nav,
@@ -542,6 +670,38 @@ main {
 
 .events .event .place {
   border-bottom: 1px dotted black;
+}
+
+.language-selector {
+  position: fixed;
+  bottom: 0;
+  right: 0;
+  background-color: black;
+  color: #e4c258;
+  border-radius: 5px;
+  text-align: center;
+  transform: translateX(100%);
+  transition: 0.5s;
+}
+
+.language-selector:hover {
+  transform: translateX(0px);
+}
+
+.language-selector .icon {
+  cursor: pointer;
+  position: absolute;
+  right: 100%;
+  top: 0;
+  background-color: black;
+  border-radius: 5px;
+  padding: 5px;
+}
+
+.language-selector .language {
+  font-size: 12px;
+  padding: 10px;
+  cursor: pointer;
 }
 
 @keyframes blinker {
@@ -647,5 +807,14 @@ main {
   .login-modal-content,
   .signup-modal-content {
     max-width: 300px;
+  }
+
+  .users-per-day .chart {
+    margin-bottom: 80px;
+  }
+
+  .users-per-day .chart .chart-bar .date {
+    transform: rotate(-45deg);
+    top: calc(100% + 30px);
   }
 }
